# bl4s2026

./: .gitattributes  .gitignore  BL4S_sim.cc  CMakeLists.txt  README.md  blind_key.txt
include/: ActionInitialisation.hh  CalorimeterSD.hh  DetectorConstruction.hh  DetectorMessenger.hh
macros/: run_blind.mac  run_extended_materials.mac  run_iron.mac  run_material_scan.mac  vis.mac
py/: add_x0_z.py  analyse_shower.py
src/: ActionInitialisation.cc  CalorimeterSD.cc  DetectorConstruction.cc  DetectorMessenger.cc
